cmake_minimum_required(VERSION 3.29)
project(50Problems C)

set(CMAKE_C_STANDARD 99)

add_executable(50Problems
        #        main.c
        #        2302009_1.c
#        2302009_2.c
#        2302009_3.c
#        2302009_4.c
#        2302009_5.c
#        2302009_6.c
#        2302009_7.c
#        2302009_8.c
#        2302009_9.c
#        2302009_10.c
#        2302009_11.c
#        2302009_12.c
#        2302009_13.c
#        2302009_14.c
#        2302009_15.c
#        2302009_16.c
#        2302009_17.c
#        2302009_18.c
#        2302009_19.c
#        2302009_20.c
#        2302009_21.c
#        2302009_22.c
#        2302009_23.c
#        2302009_24.c
#        2302009_25.c
#        2302009_26.c
#        2302009_27.c
#        2302009_28.c
#        2302009_29.c
#        2302009_30.c
#        2302009_31.c
#        2302009_32.c
#        2302009_33.c
#        2302009_34.c
#        2302009_35.c
#        2302009_36.c
#        2302009_37.c
#        2302009_38.c
#        2302009_39.c
#        2302009_40.c
#        2302009_41.c
#        2302009_42.c
#        2302009_43.c
#        2302009_44.c
#        2302009_45.c
#        2302009_46.c
#        2302009_47.c
#        2302009_48.c
#        2302009_49.c
#        2302009_50.c
#        2302009_51.c
#        2302009_52.c
#        2302009_53.c
#        2302009_54.c
#        2302009_55.c
#        2302009_56.c
#        2302009_57.c
#        2302009_58.c
#        2302009_59.c
#        2302009_60.c
#        2302009_61.c
#        2302009_62.c
#        2302009_63.c
#        2302009_64.c
#        2302009_65.c
#        2302009_66.c
#        2302009_101.c
#        2302009_102.c
#        2302009_103.c
#        2302009_104.c
#        2302009_105.c
#        2302009_106.c
#        2302009_107.c
#        2302009_108.c
#        2302009_109.c
#        2302009_110.c
#        2302009_111.c
#        2302009_112.c
#        2302009_113.c
#        2302009_114.c
#        2302009_115.c
#        2302009_116.c
#        2302009_117.c
#        2302009_118.c
#        2302009_119.c
#        2302009_120.c
#        2302009_121.c
#        2302009_122.c
#        2302009_123.c
#        2302009_124.c
#        2302009_125.c
#        2302009_126.c
        2302009_127.c

)
target_link_libraries(50Problems m)